2008-08-30  Helmut Eller  <heller@common-lisp.net>

	* slime.el [test](inspector): New test.

	* swank.lisp (prepare-part): Also wrap action elements
	in a list.  Reported by Ariel Badichi and Madhu.

2008-08-30  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-pop-to-buffer): Drop the norecord argument,
	since we can't support it easily in Emacs 21.
	Reported by Christophe Rhodes.

2008-08-30  Michael Weber  <michaelw+slime@foldr.org>

	* swank-gray.lisp (make-input-stream): fixed typos

2008-08-30  Michael Weber  <michaelw+slime@foldr.org>

	* swank-backend.lisp (*gray-stream-symbols*): added symbols
	stream-peek-char, stream-read-line, stream-file-position

2008-08-30  Mark Evenson <evenson@panix.com>

	* swank-abcl.lisp (make-output-stream, make-input-stream): provide
	the (trivial) definitions for MAKE-OUTPUT-STREAM and
	MAKE-INPUT-STREAM for ABCL.

2008-08-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el (sldb-setup): Insert "No backtrace" if the backtrace is
	empty.

2008-08-27  Anton Vodonosov <avodonosov@yandex.ru>

	* swank-ecl.lisp: Add :load-toplevel and :execute to EVAL-WHENs to
	fix loading.

2008-08-27  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (remove-sigio-handlers): Fix thinko.

	* swank.lisp (decode-message): Don't ignore EOF.
	(swank-debugger-hook): Remove the default-debugger restart.

2008-08-25  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-compute-modeline-package): Used `when-let' before its definition.
	(slime-compute-modeline-string): Display "PKG:" before "CON:".

2008-08-22  Helmut Eller  <heller@common-lisp.net>

	Some focus handling in multiframe setups.

	* slime.el (slime-pop-to-buffer): New function.
	(slime-switch-to-output-buffer): Use it.

2008-08-22  Helmut Eller  <heller@common-lisp.net>

	Use lazy lists in the inspector.

	* swank.lisp (lcons): New data type.
	(lcons*, lcons-car, lcons-cdr, llist-range): New functions.
	(emacs-inspect array): Use lazy lists.