@@ -77,8 +77,7 @@
           (t (terpri stream) t))))
 
 (defclass slime-input-stream (fundamental-character-input-stream)
-  ((output-stream :initarg :output-stream)
-   (input-fn :initarg :input-fn)
+  ((input-fn :initarg :input-fn)
    (buffer :initform "") (index :initform 0)
    (lock :initform (make-lock :name "buffer read lock"))))
 
@@ -86,10 +85,8 @@
   (call-with-lock-held
    (slot-value s 'lock)
    (lambda ()
-     (with-slots (buffer index output-stream input-fn) s
+     (with-slots (buffer index input-fn) s
        (when (= index (length buffer))
-         (when output-stream
-           (finish-output output-stream))
          (let ((string (funcall input-fn)))
            (cond ((zerop (length string))
                   (return-from stream-read-char :eof))
@@ -166,14 +163,11 @@
   (make-instance 'slime-output-stream :output-fn write-string))
 
 (defimplementation make-input-stream (read-string)
-  (make-instance 'slime-input-stream
-                 :input-fn read-string
-                 :output-stream nil))
+  (make-instance 'slime-input-stream :input-fn read-string))
 
 (defimplementation make-fn-streams (input-fn output-fn)
   (let* ((output (make-instance 'slime-output-stream 
                                 :output-fn output-fn))
          (input  (make-instance 'slime-input-stream
-                                :input-fn input-fn 
-                                :output-stream output)))
+                                :input-fn input-fn)))
     (values input output)))
